--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
         </form>
 
         <hr>
-
+        # Concept 3: Jinja
         {% for todo in todo_list %}
         <div class="ui segment">
             <p class="ui big header">{{todo.id }} | {{ todo.title }}</p>
